# tstl-c-binding-demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  bind_test.lua  build_web.sh  gen.ts  package-lock.json  package.json  serve.py  tsconfig.json
dev/: asteroids_stuff.blend  asteroids_stuff.blend1
luatest.xcodeproj/: project.pbxproj
luatest.xcodeproj/xcshareddata/xcschemes/: luatest.xcscheme
resources/: raylib_bindings.lua  rl_test.lua
resources/lua/: Entity.lua  Game.lua  main.lua
resources/lua/Objects/: Base.lua  Player.lua
src/: art.cpp  art.h  common.h  entity.cpp  main.cpp  main2.cpp  raylib_bindings.cpp  raylib_bindings1.cpp  util.cpp
ts/: Bind.ts  Drawable.ts  Entity.ts  Galaxy.ts  Game.ts  Global.ts  Math.ts  NavMap.ts  PlayerController.ts  lib.d.ts  main.ts  rl.d.ts
ts/Objects/: Base.ts  Planet.ts  Player.ts  Shot.ts
ts/Scenes/: GameScene.ts  NavMapScene.ts  Scene.ts
web/: shell.html
